--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
-fastapi>=0.100.0
-uvicorn>=0.20.0
-requests>=2.28.0
-pydantic>=2.0.0
-python-dotenv>=1.0.0
-# --- LangChain 依赖 ---
-langchain>=0.1.0
-langchain-google-genai
-langchain-community
-faiss-cpu
-duckduckgo-search
+# --- Web 框架 ---
+fastapi>=0.110.0
+uvicorn[standard]>=0.29.0
+python-multipart  # 处理文件上传
+
+# --- LangChain 全家桶 (新版架构) ---
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-community>=0.3.0
+langchain-openai>=0.2.0  # 关键：DeepSeek 依赖这个
+langchain-text-splitters>=0.3.0
+langgraph>=0.2.0         # 关键：新版 Agent 架构
+
+# --- 网络与异步 (解决代理卡死) ---
+httpx>=0.27.0
+aiohttp>=3.9.0
+
+# --- RAG 与 向量库 ---
+faiss-cpu>=1.8.0         # 向量数据库 (无显卡版)
+sentence-transformers>=3.0.0 # 本地 Embedding 模型
+beautifulsoup4>=4.12.0   # 网页/HTML解析
+
+# --- 数据库与工具 ---
+sqlalchemy>=2.0.0
+aiosqlite>=0.20.0        # 异步 SQLite
+python-dotenv>=1.0.1     # 读取 .env
+tiktoken>=0.7.0          # 计算 Token
+pydantic>=2.8.0          # 数据校验
