前端修改，增加pro功能

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ CLAUDE.md
 .claude/agents/kfc/spec-test.md
 .claude/settings/kfc-settings.json
 .claude/system-prompts/spec-workflow-starter.md
+.dockerignore
+docker-compose.yml
+Dockerfile
