--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,33 @@
 # --- Web 框架 ---
 fastapi>=0.110.0
 uvicorn[standard]>=0.29.0
-python-multipart  # 处理文件上传
+python-multipart>=0.0.9  # 处理文件上传
 
 # --- LangChain 全家桶 (新版架构) ---
 langchain>=0.3.0
 langchain-core>=0.3.0
 langchain-community>=0.3.0
-langchain-openai>=0.2.0  # 关键：DeepSeek 依赖这个
+langchain-openai>=0.2.0        # DeepSeek & Azure 依赖
 langchain-text-splitters>=0.3.0
-langgraph>=0.2.0         # 关键：新版 Agent 架构
+langchain-huggingface>=0.1.0   # 【新增】本地 Embedding 模型依赖
+langgraph>=0.2.0               # Agent 编排
 
-# --- 网络与异步 (解决代理卡死) ---
+# --- 大模型客户端 ---
+openai>=1.30.0                 # 【关键】支持 Azure 和 DeepSeek 原生调用
+
+# --- 网络与异步 ---
 httpx>=0.27.0
 aiohttp>=3.9.0
+requests>=2.30.0               # 【新增】LLM Service HTTP 请求依赖
 
 # --- RAG 与 向量库 ---
-faiss-cpu>=1.8.0         # 向量数据库 (无显卡版)
-sentence-transformers>=3.0.0 # 本地 Embedding 模型
-beautifulsoup4>=4.12.0   # 网页/HTML解析
+faiss-cpu>=1.8.0               # 向量数据库
+sentence-transformers>=3.0.0   # 本地模型
+beautifulsoup4>=4.12.0         # 网页解析
 
 # --- 数据库与工具 ---
 sqlalchemy>=2.0.0
-aiosqlite>=0.20.0        # 异步 SQLite
-python-dotenv>=1.0.1     # 读取 .env
-tiktoken>=0.7.0          # 计算 Token
-pydantic>=2.8.0          # 数据校验
+aiosqlite>=0.20.0              # 异步 SQLite
+python-dotenv>=1.0.1           # 读取 .env 配置
+tiktoken>=0.7.0                # Token 计算
+pydantic>=2.8.0                # 数据校验
