save: 保存我有用的新文件

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,52 @@ test_batch.xlsx
 备忘录
 备忘录
 备忘录.txt
+final_service.log
+tmpclaude-8e2d-cwd
+tmpclaude-366f-cwd
+tmpclaude-a641-cwd
+data/customs_audit.db
+测试文件_无用文件/analyze_problem_chunk.py
+测试文件_无用文件/check_all_chunks.py
+测试文件_无用文件/check_embedding_similarity.py
+测试文件_无用文件/check_faiss_chunks.py
+测试文件_无用文件/check_faiss_correct.py
+测试文件_无用文件/check_faiss_metadata.py
+测试文件_无用文件/check_faiss_simple.py
+测试文件_无用文件/debug_faiss_source.py
+测试文件_无用文件/debug_filename_flow.html
+测试文件_无用文件/debug_knowledge_path.py
+测试文件_无用文件/debug_real_rag.py
+测试文件_无用文件/fresh_start_log.txt
+测试文件_无用文件/init_pdf_database.py
+测试文件_无用文件/nul
+测试文件_无用文件/pdf_process_log.txt
+测试文件_无用文件/process_all_pdfs.py
+测试文件_无用文件/QUICK_START.py
+测试文件_无用文件/rag pdf方案推荐.txt
+测试文件_无用文件/rebuild_index_with_pdfs.py
+测试文件_无用文件/service_restart_log.txt
+测试文件_无用文件/startup_final.txt
+测试文件_无用文件/startup_log.txt
+测试文件_无用文件/startup_output_new.txt
+测试文件_无用文件/startup_output.txt
+测试文件_无用文件/test_backend_snippet.py
+测试文件_无用文件/test_different_queries.py
+测试文件_无用文件/test_e2e_rag.html
+测试文件_无用文件/test_faiss_path.py
+测试文件_无用文件/test_filename_simple.py
+测试文件_无用文件/test_filename_validation.py
+测试文件_无用文件/test_final_rag.py
+测试文件_无用文件/test_final_verification.py
+测试文件_无用文件/test_marker_pdf_complete.py
+测试文件_无用文件/test_rag_complete.py
+测试文件_无用文件/test_rag_content.html
+测试文件_无用文件/test_rag_content.py
+测试文件_无用文件/test_rag_frontend.html
+测试文件_无用文件/test_rag_interactive.html
+测试文件_无用文件/test_rag_simple.html
+测试文件_无用文件/test_report_rag.py
+测试文件_无用文件/test_vietnamese_fix.py
+测试文件_无用文件/verify_pdf_integration.py
+测试文件_无用文件/功能三设计备忘录.txt
+测试文件_无用文件/测试对比说明.md
