--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,6 @@ numpy>=1.24.0                  # 数值计算（sentence-transformers依赖）
 scipy>=1.11.0                  # 科学计算（faiss依赖）
 scikit-learn>=1.3.0            # 机器学习（可选）
 huggingface-hub>=0.20.0       # HuggingFace模型下载
+
+# --- Word 文档导出（功能三：深度研究工具） ---
+python-docx>=0.8.11           # Word 文档生成
